--- a/QuickNote/Form1.resx
+++ b/QuickNote/Form1.resx
@@ -478,4 +478,80 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAKAAAAGkAAACpAAAA0wAA
+        AO0AAAD6AAAA+gAAAO0AAADTAAAAqQAAAGkAAAAoAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAANgAAAJQAAADcAAAA+gEC
+        Af8KDQr/ExgU/xohHP8aIRz/ExgU/woNCv8BAgH/AAAA+gAAANwAAACUAAAANgAAAAQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGgAAAIYAAADoAQEB/xIY
+        FP87TEH/ZYJu/4Kmjf+Su57/mMKl/5jCpf+Su57/gqaN/2WCbv87TEH/EhgU/wEBAf8AAADoAAAAhgAA
+        ABoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADUAAAC/AAAA/hIX
+        E/9QZlf/jLOX/6XUs/+r2rn/qtq4/6nZt/+p2Lf/qdi3/6nZt/+q2rj/q9q5/6XUs/+Ms5f/UGZX/xIX
+        E/8AAAD+AAAAvwAAADUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAA1gIC
+        Av8wPjT/hKmP/6jXtv+q2bj/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6rZ
+        uP+o17b/hKmP/zA+NP8CAgL/AAAA1gAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANQAA
+        ANUDBAP/RFdK/5rFp/+q2bj/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6rZuP+q2rj/qNi3/6jX
+        tv+o17b/qNi3/6rauf+s3bv/nMip/0VYSv8DBAP/AAAA1QAAADUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ABoAAAC/AQIB/0RXSv+fzK3/qdm4/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/fqGJ/2mG
+        cv+gza3/qNi3/6nYt/+fzK3/cJB6/114Zf+BpYz/ncqr/0VYS/8BAgH/AAAAvwAAABoAAAAAAAAAAAAA
+        AAAAAAADAAAAhgAAAP4wPjT/msWn/6nZt/+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6PR
+        sf8yQDb/BwkH/3+iif+q2rn/p9a1/1VsXP8DBQT/AAAA/wsPDP9he2n/mMOl/zA+NP8AAAD+AAAAhgAA
+        AAMAAAAAAAAAAAAAADYAAADnEhcT/4Spj/+q2rj/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jX
+        tv+o17b/pdOz/zVEOv8AAAD/aIVx/6vbuv+dyar/JS8o/wMEA/9PZFX/Oko+/xYcGP+Su57/hquR/xIX
+        E/8AAADnAAAANgAAAAAAAAADAAAAlAAAAP9QZlf/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jX
+        tv+o17b/qNe2/6jXtv+p2Lf/Sl9Q/wAAAP9PZVX/qtq4/57Kq/8lMCj/BggH/4Gli/+eyqv/a4l0/5zI
+        qf+p2Lf/UGZX/wAAAP8AAACUAAAAAwAAACkAAADbExgU/4yzl/+q2bj/qNe2/6jXtv+o17b/qNe2/6jX
+        tv+o17b/qNe2/6jXtv+o17b/qNe2/6rauf9jf2v/AAAA/zA+NP+j0LD/ptW0/zpKP/8AAAD/aIVw/6vb
+        uf+q2bj/qNi2/6rZuP+Ms5f/ExgU/wAAANsAAAApAAAAaQAAAPo8TEH/pdOz/6jXtv+o17b/qNe2/6jX
+        tv+o17b/qNe2/6jXtv+q2bj/pdSz/6TSsv+p2bf/q9u5/3iZgv8EBQX/EhcU/421mf+s3Lr/WXFg/wAA
+        AP9JXU//qdi3/6jXtv+o17b/qNe2/6XTs/88TEH/AAAA+gAAAGkAAACoAQEB/2WCbv+q2rn/qNe2/6jX
+        tv+o17b/qNe2/6jXtv+o17b/qNa1/3aXgP85ST7/M0E2/2J+av+iz6//irCV/w0RDv8AAAD/Xndl/63d
+        u/93mIH/AwQD/yw4L/+hzq7/qNi3/6jXtv+o17b/qtq5/2WCbv8BAQH/AAAAqAAAANMKDQv/gqaN/6ra
+        uP+o17b/qNe2/6jXtv+o17b/qNe2/6rZuP+Cp43/EhcT/wAAAP8HCQf/BQYF/0thUv+QuZz/Fx0Z/wAA
+        AP8dJR//j7eb/5C4nP8PExD/FRsX/5S+of+p2bf/qNe2/6jXtv+q2rj/gqaN/woNC/8AAADTAAAA7hMY
+        FP+Su57/qdm3/6jXtv+o17b/qNe2/6jXtv+p2Lf/ptW0/z9RRf8AAAD/JS8o/3+iif9IW07/CAsJ/ztM
+        QP8QFRL/Cg0L/xUbF/8mMSn/TWJT/wgLCf8RFRL/kLic/6nZuP+o17b/qNe2/6nZt/+Su57/ExgU/wAA
+        AO4AAAD6GSEc/5jCpf+p2Lf/qNe2/6jXtv+o17b/qtm4/6DNrv9wj3n/DRAO/wQFBP9si3X/rd27/57K
+        q/9GWUz/BgcG/wAAAP8qNi3/bo14/xgfGv8AAAD/AAAA/zZFOv+gza3/qdi3/6jXtv+o17b/qdi3/5jC
+        pf8ZIRz/AAAA+gAAAPoZIRz/mMKl/6nYt/+o17b/qNe2/6fWtf90lH3/KjYu/wkMCv8AAAD/DA8M/2iG
+        cf+l07P/qdm4/6LPsP94moL/Xnhl/4arkf+p2Lb/jLSY/2N/bP9kgG3/lL2g/6nYt/+o17b/qNe2/6jX
+        tv+p2Lf/mMKl/xkhHP8AAAD6AAAA7hMYFP+Su57/qdm3/6jXtv+q2bj/e52F/w8UEf8BAQH/HiYh/yUw
+        Kf8ICgn/CAoJ/113Zf+n1bX/qdi3/6rauP+q2rj/qtm4/6jXtv+q2bj/qtq5/6rauf+p2Lf/qNe2/6jX
+        tv+o17b/qNe2/6nZuP+Su57/ExgU/wAAAO0AAADTCg0L/4Kmjf+q2rj/qNe2/6XTsv87S0D/AAAA/zZF
+        Ov+WwKP/nsus/2iFcP8LDgz/DhIP/4GljP+q2bj/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jX
+        tv+o17b/qNe2/6jXtv+o17b/qtq4/4KmjP8KDQv/AAAA0wAAAKgBAQH/ZYJu/6rauf+p2Lf/m8ao/yAp
+        I/8AAAD/bYx3/6vcuv+p2Lf/p9W0/0JVSP8AAAD/R1tN/6fWtf+o17b/qNe2/6jXtv+o17b/qNe2/6jX
+        tv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+q2rn/ZYJu/wEBAf8AAACnAAAAaQAAAPo8TEH/pdOz/6nZ
+        t/+ZxKb/HCQf/wMEA/93mIH/q9q5/6jXtv+r27n/b455/wEBAf8kLif/ncmq/6nYt/+o17b/qNe2/6jX
+        tv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6XTs/87TED/AAAA+gAAAGgAAAApAAAA2xMY
+        FP+Ms5f/qtq4/5/Mrf8pNC3/AAAA/2qIc/+r27n/qNe2/6rauP9/o4r/BwoI/xQaFv+Vv6H/qdm3/6jX
+        tv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+q2bj/i7KX/xMYFP8AAADbAAAAKAAA
+        AAMAAACUAAAA/1BmV/+o17b/qNe2/0ldTv8AAAD/QVRH/6fVtP+o17b/q9u5/3udhf8FBwb/FRsX/5W/
+        ov+p2bf/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv9QZlf/AAAA/wAA
+        AJMAAAADAAAAAAAAADYAAADnEhcT/4Spj/+s3Lv/f6OK/wwPDf8NEA7/cpJ7/6fVtf+l07L/TWNT/wAA
+        AP8rNy//n8yt/6nYt/+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+q2rj/hKmP/xIX
+        E/8AAADmAAAANgAAAAAAAAAAAAAAAwAAAIcAAAD+MD40/5rGp/+n1rX/VGta/wQFBP8OEg//Oko//zZG
+        O/8ICgn/BQYF/2aDb/+p2bf/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qdm3/5rF
+        p/8wPTT/AAAA/gAAAIYAAAACAAAAAAAAAAAAAAAAAAAAGgAAAL8BAgH/RFdK/6DNrv+j0LD/Xnlm/xsi
+        Hf8FBgb/AwUE/xUbF/9ZcmH/otCw/6jYt/+o17b/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6nZ
+        uP+fzK3/RFdK/wEBAf8AAAC+AAAAGQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANQAAANUDBAP/RFdK/5vG
+        qP+q2rj/lr+i/32gh/96m4T/kbmd/6fWtf+p2Lf/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jX
+        tv+q2bj/msWn/0RXSv8DBAP/AAAA1QAAADUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAA
+        ANYCAgL/MD40/4Spj/+p2bf/rNy6/6vauf+p2bj/qNe2/6jXtv+o17b/qNe2/6jXtv+o17b/qNe2/6jX
+        tv+q2bj/qNe2/4Spj/8wPTT/AgIC/wAAANUAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAANQAAAL8AAAD+EhcT/1BnV/+Ms5f/pdSz/6vauf+q2rj/qdm3/6nYt/+p2Lf/qdm3/6ra
+        uP+r2rn/pdSz/4uyl/9QZlb/ERcT/wAAAP0AAAC/AAAANQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAGgAAAIYAAADoAQEB/xIYFP87TEH/ZYJu/4Kmjf+Su57/mMKl/5jC
+        pf+Su57/gaaM/2WBbv87TED/EhcU/wABAf8AAADnAAAAhgAAABkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAADYAAACUAAAA3AAAAPoBAgH/Cg0K/xMY
+        FP8aIRz/GiEc/xMYFP8KDQr/AQIB/wAAAPoAAADcAAAAkwAAADUAAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAoAAAAaQAA
+        AKkAAADTAAAA7QAAAPoAAAD6AAAA7QAAANMAAACoAAAAaAAAACgAAAAEAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/4AB//4AAH/8AAA/+AAAH/AAAA/gAAAHwAAAA4AAAAGAAAABAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAABgAAAAcAA
+        AAPgAAAH8AAAD/gAAB/8AAA//gAAf/+AAf8=
+</value>
+  </data>
 </root>
