--- a/QuickNote/Form1.resx
+++ b/QuickNote/Form1.resx
@@ -124,29 +124,29 @@
   <data name="SaveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAUZSURBVHhe7Z3NTiNHEID5FyAUIS7ckkOeIY9iIWUPPFMi
-        ceAFspe8xyrPECmXZJVLREiACAzKpEozu550f+7qsdttGNcnfQdwVVdPldeMwTuz5TjOJvL8/PxLs0Ye
-        Hx//6LaymUgPJnd3dy9tO9ZDt5WFORHfie/FD+JHURd9M04mk+blZX0zkD0sxNfij+KD+Kv4txgd3Ftx
-        nUOQ+oPQZ/x34r34jxgdzFt1XUOQ2tl8Kf4savOjA1Bvbm66ZV8fujfac991DEHqZvGN+Kf4LEYb/+Rr
-        YTqdNvLDtftqBu05tPYQpKbJV6I2P9psaC2ur6+b09NT3IO6s7PTnJ2dNff3911GC8WSNYcg9ZLoa76+
-        7CSf+Z+sxdHREdbvu7u72zw9PXUZLRQ3z1pDkFpJvhfnvuaH1oJqkyEUk7LGEKTOXPRUM7v5ai2oNhlC
-        MZarHoLUmIue5w861awF1SZDKCbHVQ5B1ke+EPVNVrSZlLWg2mQIxeS6qiHI2si34m9itJGUtaDaZAjF
-        DHEVQ5B1kR/Ev8RoEylrQbXJEIoZaukhyJrIT+K/YrSBlLWg2mQIxSxiySHIesjvYlTYshZUmwyhmEUt
-        NQRZC3kRo6KWtaDaZAjFLGOJIcg6SFQsx1pQbTKEYpZ12SHIGkhUKMdaUG0yhGJKuMwQJB+JiuRYC6pN
-        hlBMKRcdguQiUYEca0G1yRCKKekiQ5A8JFo8x1pQbTKEYko7dAiSg0QL51gLqk2GUMwqHDIEiUeiRXOs
-        xcHBAdbvu7293UXPoLhVmTsEiUWiBXOsxcXFRXNycoJ7UPWx8/PzLnoGxa7SnCFIHBItlmMt9E+Nl5eX
-        zeHhIe5jf3+/ubq66qJnUOyqtYYgMUi0UI7h32BfEw8PD7jnGqaGII8j0SLucs4bgjyGRAu4y0tDkO8j
-        UbJbRh1C/wPB8j0kSnTLKXz+VLZ8jURJblF1CpPpdKofbEYoyS2nCSW55TShJLecJpTkltOEktxymlCS
-        W04TSnLLaUJJbjlNKMktpwklueU0oSS3nCaU5JbThJLccppQkltOE0pyy2lCSW45TSjJLacJJbnlNKEk
-        t5wmlOSW04SS3HKaUBJ6e3urn67YaLQH1JuEJpSEOi3Um4QmlIQ6LdSbhCaUhIZYn4cfA3M+ZDtEE0pC
-        ++i12vRKVRQ3JvUY9Vj7UFxCE0pCQyhmjIZQTEITSkL7bMq/AP0fOCEUl9CEktCQTfgZQFBvEppQEuq0
-        UG8SmlAS6rRQbxKaUBLqtFBvEppQEuq0UG8SmlASGuJvxLI0oSS0j78Ry9aEktAQihmjIRST0ISS0D76
-        rNArl1PcmNzb2+uOeAbFJTShJDTE34hlaUJJqNNCvUloQkmo00K9SWhCSajTQr1JaJJ94VanhXozR+2t
-        Sfali50W6s0ctbcm2Rfv7qMXRTo+Psa4ManHqMfah+JA7an21iT78vV99BSUYsZoeLpNMaD2VHtrkn0D
-        hz76RkyvVkhxY1J/FRFCcaD2VHtrkn0LkxB/I5ZUe6q9zSLrJj5OC/UmUHupPc0m6zZWTgv1JlB7qT0d
-        hHkjN7pn46ahPaDe9NQeai8HM+hWhi6qvdMeai8XIvtmni6qvdMeLkXW7Wzd/6m90p5p74pg3tDZ/az2
-        SHulPSvKaG9pXkjtifZGe7Twa34Oo7qp/5LqsWsPtBfak8GnmsugU34nvhc/iB9F2uQY1WPVY9Zj1x6s
-        9BnvOI7jjJGtrf8Abol64Fzq7ggAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAUaSURBVHhe7Z1LTiRHEED5CxCyEBt29sJn8FEQkmfBmWyJ
+        BRfwbHyPkc9gyRt75I2FMR8LGuRyhKpmuibzdUZWd3Y2VMeT3gKIyMiK6OmpGnqqNhzHWUeen59/a1bI
+        4+PjX91W1hPpwdnt7e1L247V0G1lbo7Ed+J78YP4UdRF34xnZ2fNy8vqZiB7mItvxZ/FB/F38VaMDu6t
+        uMohSP1B6Cv+B/Fe/FeMDuatuqohSO1svhZ/FbX50QGo19fX3bKvD90b7bnvKoYgdbP4TvxbfBajjX/y
+        tTCZTJq7u7vuqym059DaQ5CaJt+I2vxos6G1uLq6ao6Pj3EP6tbWVnNyctLc3993GS0US9YcgtRLou/5
+        +raTfOV/shYHBwdYv+/29nbz9PTUZbRQ3CxrDUFqJflRnPmeH1oLqk2GUEzKGkOQOjPRU83s5qu1oNpk
+        CMVYLnsIUmMmep4/6FSzFlSbDKGYHJc5BFkf+UrUi6xoMylrQbXJEIrJdVlDkLWR78U/xGgjKWtBtckQ
+        ihniMoYg6yI/if+I0SZS1oJqkyEUM9TSQ5A1kV/E/8RoAylrQbXJEIqZx5JDkPWQP8WosGUtqDYZQjHz
+        WmoIshbyIkZFLWtBtckQilnEEkOQdZCoWI61oNpkCMUs6qJDkDWQqFCOtaDaZAjFlHCRIUg+EhXJsRZU
+        mwyhmFLOOwTJRaICOdaCapMhFFPSeYYgeUi0eI61oNpkCMWUdugQJAeJFs6xFlSbDKGYZThkCBKPRIvm
+        WIu9vT2s33dzc7OLnkJxyzJ3CBKLRAvmWIvz8/Pm6OgI96Dqz05PT7voKRS7THOGIHFItFiOtdBfNV5c
+        XDT7+/u4j93d3eby8rKLnkKxy9YagsQg0UI5hr+DfU08PDzgnmuYGoL8HIkWcRdz1hDkZ0i0gLu4NAT5
+        PhIlu2XUIfQ/ECzfQ6JEt5zC509ly9dIlOQWVadwNplM9IPNCCW55TShJLecJpTkltOEktxymlCSW04T
+        SnLLaUJJbjlNKMktpwklueU0oSS3nCaU5JbThJLccppQkltOE0pyy2lCSW45TSjJLacJJbnlNKEkt5wm
+        lOSW04SS3HKaUJJbThNKQm9ubvTTFWuN9oB6k9CEklCnhXqT0ISSUKeFepPQhJLQEOvz8GNgxodsh2hC
+        SWgfvVeb3qmK4sakHqMeax+KS2hCSWgIxYzREIpJaEJJaJ91+ROg/wMnhOISmlASGrIOfwcQ1JuEJpSE
+        Oi3Um4QmlIQ6LdSbhCaUhDot1JuEJpSEOi3Um4QmlISG+IVYliaUhPbxC7FsTSgJDaGYMRpCMQlNKAnt
+        o68KvXM5xY3JnZ2d7oinUFxCE0pCQ/xCLEsTSkKdFupNQhNKQp0W6k1CE0pCnRbqTUKT7Bu3Oi3Umxlq
+        b02yb13stFBvZqi9Ncm+eXcfvSnS4eEhxo1JPUY91j4UB2pPtbcm2bev76OnoBQzRsPTbYoBtafaW5Ps
+        Bzj00QsxvVshxY1J/aeIEIoDtafaW5PsR5iE+IVYUu2p9jaLrIf4OC3Um0DtpfY0m6zHWDkt1JtA7aX2
+        dBDmg9zomY3rhvaAetNTe6i9HMygRxm6qPZOe6i9nIvsh3m6qPZOe7gQWY+zdb9Qe6U9094VwXygs/tZ
+        7ZH2SntWlNE+0ryQ2hPtjfZo7vf8HEb1UP8F1WPXHmgvtCeDTzUXQaf8TnwvfhA/irTJMarHqsesx649
+        WOor3nEcxxkjGxv/A5lretejx4x+AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="LoadButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -193,24 +193,24 @@
   <data name="UnderlineButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAPzSURBVHhe7d1LqFVlGMbx08WINBNr0EXTGoQ0MKOoaBBF
-        BDWozBqVgUk4sHIQdJl0j9SoqAgiIpp0AXVYCAYKRdA4ELSkqBSKLlB2p4v/BxJeXj7P6Vw871prP3/4
-        DZzs/X3725ez19rrc8w555xzzjnnnHOT6DJ8PgtewXS7G63bno6tKG0Fdv1nL77GvzPgN2iCH0C3/QSm
-        22rott6HbvtHtO57Il/hI+i2XkTnWopH8TNaExjPh7gWJ+Bodxwuxza0xhL9ikdwOnrTRZjMs+x16EGp
-        aB3+QWtc3+FC9LIH0ZpUtg+z8awfry3I49KiXI3ediaO9MyK9PKu7hbkce1A79OzO08suwbVnYM8rvvQ
-        +95FnlimyVenz5+/EMd1A3rfa4iTajkJXUgfuHFcl6D3PYc4qexvdKUvEMe2DL1vM+Kkst/RlfLn1bno
-        fRsRJ5XpW29X+hRxbPpS2fu8AMV5AYrzAhTnBSjOC1CcF6A4L0BxXoDivADFeQGK8wIU5wUozgtQnBeg
-        OC9AcV6A4rwAxXkBivMCFOcFKM4LUJwXoDgvQHFPIk4q69IC5B9mLUHvexxxUlmXFkCXLsWxLULvewhx
-        Utmf6Eq6/iuO7Qz0vvsRJ5XpAo5j0IXyr6MXoPfdgziplvnoQno7jOOag963BnFSLWejuhMRx6SrPAfR
-        KsSJtVyM6nQ9WxyTrhUYRFcgTqzlelSnJ0Ecky7GHkS6yiROrOUuVJdfqeXbEMxU8xAn1vIMqnsAcUxP
-        YTB9gzi57B1U9xbimLS3xGDSxhZxctmXqO4zxDGdj8H0NOLkMn0ZOwtVnYc4nm/RlS+HM5KuhI8TbLkD
-        VeXjVW9iUB2PA4iTzLajopOhZ3wcy00YXBMdlNMF2xXX5T6POA49UQZxCCJ3Cr5HnGz2NmazG5F3c9mA
-        wbYecbKZHoybMRtdhV8Q7/9jDPLZf7hjsRNx0tlP0FZiR7PbkY986t/aA2/w6SRHPvGRHcRKzHSn4Q3k
-        +9Mr7zaMTMuRT360aLvKUzHdFkJ/BPyAfB/68Ndb48ilRdiP/IBk+uDehMmeINd7ufZ7exl6RbVuW287
-        t2Jk07df7ePZenBaduMl6Cybtre8MtAh7TvxLPSdYqIdGz+BdnYc+bRV2L2Y6kaqk/UH9IqaCxfSe/3D
-        mOgDeqr0/v8CFsONkw6C6S1Fx+N1Vkq71rYe0P9jD16F/qLSOV83hfTdQWfVrsNaaI9RbYOmnXajx6Cf
-        wOjPyUsxiJ+UOOecc0dKx1UO/28So0qPQVnvofXn3yjRY1CWF8ALUM4LUMwLUMwLUMwLUKx0AS5APCky
-        ivQYOOecc84555xzznW/sbFD4Aam1wtMgWcAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAPySURBVHhe7d1bqOVjGMfx7SwKGSPTOEVhSqGQ0kyT04VS
+        ToVSNAoXRIpRToXIJEpKRG4QuVZEiJRbpSgkhyKHnA/J6furvevp6R3bnrX2et7/f/2+9bmZi7Xfdz17
+        r7XXWvv/zoJzzjnnnHPOOeecc84513+n4OMZeBSTdg1atz2J51Ha8Xht0bv4Av9Mwc/4AEu3fRcm7VIs
+        3d5H+B6tr72cT/AGdDsPobsOwe34Ca0N/Jc3cSZ2xWq3M/QT/Bxaa4l+wa04EIPpBPyA1oZanoDulIqu
+        wN9oretrHIdBthWtTWV6uNkdlT2LvC4N5TQMtnXY3ndWpIes6i5AXtdLGHwfIm8sOwPVHY68rhsx+F5A
+        3limzVe3C/5EXNc5GHyPI26qZS/00DeI6zoZg+8BxE1l+q7rJf2OH9d2DAbffYibyn5HL+XnqyMw+O5F
+        3FT2G3pJvw7HtfXw3DRxHkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBx
+        HkBxHkBxHkBxHkBxHkBxHkBxHkBxHkBxdyNuKutpAPkPsw7D4LsTcVNZTwPQdV9xbQdj8N2GuKnsD/TS
+        Z4hr0/UNg+8mxE1luoBjJ/RQ/uvo/TD4rkXcVMs+6CE9HMZ17YbBdzniploORXV7Iq5Jl8qOovMRN9Zy
+        Eqpbj7gmXSswijYhbqylh0uBTkRc09sYRbrKJG6sRccIVJd/UsuPIZhWeyNurOV+VHcz4pruwWj6EnFz
+        ma6krO4ZxDXpbInR9Cri5jK9AKouvwregNG03IV6Uvmy/2jEtXyFXl4cTiVdCR832LIFVek4nLiWpzGq
+        dPzM54ibzF5ERXoVnt+COBejS+ftxE1mf+FIzDoduhTXoW+UWZxXNPP2xbeIm810ZMwsOw/5NJceXpOs
+        WlcjbrblQsyi06GTsOLXfgejeANue+lErFcQN53pqLNTsZrpDUIdkRC/7q8Y7MlYK+kgfIq4+UxD0AFK
+        024t8gsu0fPPJZibjoXOYst3RKajbg7ApK3BHfgO+Wvozr8Kc5eGkD8CbNGdtg0rPblEZ9CdhceQH+uX
+        6GHnIsxt+sz1dbTunJb38Aiux9nYHOgh60o8iJfxI1q3seR96GTHuU9HhV2HHT1IdaX05Kt3Ons5paub
+        9sctyKdWTYte7eqnQ598uWXaCP1B11vQZ7OtO/T/0HHKOndan7jtAbeDHQU9oV4GnTGq32j05PrkoocX
+        /+0GXAx9xtzLX1o455xzq9JTiP+jxDzSfVCWXnG2fv2bJ7oPyvIAPIByHkAxD6CYB1DMAyhWOgB9iB0/
+        FJlHc/FBvnPOOefcNFtY+Bec26ZR+guIYgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="ItalicsButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -281,34 +281,34 @@
   <data name="DrawButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAYuSURBVHhe7ZxLaCRVGEajYqIiIiIkgiCK4kJBMEZwISKG
-        ZOt7K4JCJC4EXbhQcFAXLkxCEnDjIggKbgRdCAouFAyCoPgeH3HyfkfzaDUxmS6/U1MVK5fbnUp39RWp
-        /8BhpjM9WXz/7Xp8XVVthmEYxv+Rm+WL8sb4lRGUR+SBjORf8h5pBOINSfBZd6UNIQDvSjf8VBtCCzlP
-        fiJ9wWe1IbSADvm19AXu04ZQIFfIWekLup42hAK4Vv4qfQHn0YbQBD1yRW5LX7h5tSE0yIzclL5QT6oN
-        oQHukr/LPekL9aTaEHJwp1yQd8evbAhBuUNuyB1JtdCqIfC7rTtyuF2uS4LOBtWqIbwkjYRbpRt+aiuG
-        QIFHi2qIW+SarHe0U/QQaFENcZNclXkONYsaAi2qIdgJcpK1JX1BuVYl709pZAi0qIa4Xi7Lk4TP2TCh
-        ZznJEGhRDXGdXJSNhs+fbLZOsjmiRaXKLj3XyHmZt9vxhc9rfp5nn8DRzmlJlV16rpZUykWEn76n3hB4
-        Ly0qVXbpuUpOS85w0/DqmSf8VN8QOKpih02VXXo6JSuxFeGnukPgk3Zb/KrkXCl/khXpC861kfBTs0Mw
-        BNtedoAhwkc+YbSohrhcfif/kL6wXJsNn+0+LSpVdum5THLcHTp8quzSc6n8Uv4pfWG5Nhs+Rzu0qFTZ
-        pecS+bkMGT4tKlV26blYfiY5EvGF5dps+NQY1BFU2aWH0/xPZcjwOcmiyi497fJjGTJ8WlT7PldcKD+S
-        XGXgC8u12fB5Ly3qDbL0XCA/lCHDp0Wlyi49hP++zPtNVLPhc4Y7J6myS8/58j0ZMnxaVKrs0sM3Su/I
-        UOHTIdGiUmWXHsJ/W/4tfWG5FhE+LSpVtiHelKHCp0OiRaXKNsSEDBk+Lap9jZjwutyXvrBcmw2fDukr
-        SZVtiNdkyPBpUamyDTEqQ4VPjUGLSpVtiCGZ3v5/nEWET4tKlW2IV2TI8GlRqbINwQ0LocKnQ6JFtSvW
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAYrSURBVHhe7ZxLaCRVGEajYqIiIiIkgiCK4kJBMEZwISKG
+        ZOt7K4JCJC4EXbhQcFAXLkxCsnDjIggKbgRdCAouFAyCoPgeH3HSeT81LzVtMl1+p6YqVi63O5Xu6itS
+        /4HDTGd6svj+2/X4uqo6DMMwjP8jN8sX5Y3xKyMoj8gDGcm/5D3SCMQbkuCz7kkbQgDelW74qTaENnKe
+        /ET6gs9qQ2gDXfJr6Qvcpw2hQK6Qs9IXdCNtCAVwrfxV+gLOow2hBfrkityWvnDzakNokorclL5QT6oN
+        oQnukr/LqvSFelJtCDm4Uy7Iu+NXNoSg3CE35I6kWmjXEPjd1h053C7XJUFng2rXEF6SRsKt0g0/tR1D
+        oMCjRTXELXJNNjraKXoItKiGuEmuyjyHmkUNgRbVEOwEOcnakr6gXGuS96c0MwRaVENcL5flScLnbJjQ
+        s5xkCLSohrhOLspmw+dPNlsn2RzRolJll55r5LzM2+34wuc1P8+zT+Bo57Skyi49V0sq5SLCT9/TaAi8
+        lxaVKrv0XCVnJGe4aXiNzBN+qm8IHFWxw6bKLj3dkpXYjvBT3SHwSbstflVyrpQ/yV3pC861mfBTs0Mw
+        BNtedoAhwkc+YbSohrhcfif/kL6wXFsNn+0+LSpVdum5THLcHTp8quzSc6n8Uv4pfWG5tho+Rzu0qFTZ
+        pecS+bkMGT4tKlV26blYfiY5EvGF5dpq+NQY1BFU2aWH0/xPZcjwOcmiyi49nfJjGTJ8WlT7PldcKD+S
+        XGXgC8u11fB5Ly3qDbL0XCA/lCHDp0Wlyi49hP++zPtNVKvhc4Y7J6myS8/58j0ZMnxaVKrs0sM3Su/I
+        UOHTIdGiUmWXHsJ/W/4tfWG5FhE+LSpVtiHelKHCp0OiRaXKNsSkDBk+Lap9jZjwutyXvrBcWw2fDukr
+        SZVtiNdkyPBpUamyDTEuQ4VPjUGLSpVtiBGZ3v5/nEWET4tKlW2IV2TI8GlRqbINwQ0LocKnQ6JFtSvW
         El6QIcOnRaXKNsRzMlT41BgfSKpsQzwrz0pfWK5FhE+LSptqiGdkyPBpUS38hKdkqPCpMWhRqbIN8aQM
-        GT4tqt0ckfCEDBk+LaqFn/C4DBU+NQYtqpHwqAwZPi2qkaGVN0dkJXxaVMPhAXncdfrNhs/JHC2qIbok
+        GT4tqt0ckfCEDBk+LaqFn/C4DBU+NQYtqpHwqAwZPi2qkaGdN0dkJXxaVMPhAXncdfqths/JHC2qIXok
         VxM8HL86B2e8XMzqC6+I8F+VRgKVMk+bIpiH+EHCW9J9/loR4dOiGgms/t9kevlIdggXSfr3LyT/VkT4
-        L0sjA6uf71bdoB7c398/Mzk5eZ/+zqeD9zQb/ilpZEhXv+8qhoPNzc2FSqWyNzEx8ZheM4RGw+eQln2K
-        4cDq/7arqyuanZ2N+vr6jgQ3Pj5e3dnZqWoIlWq12kz4tKiGA6ufG9b2h4aGotXV1Whvb+/IEAYGBqL1
-        9fUIMkPgaMndZNWS8J+WhgdW//esfm1q4pCBIbS3t8cB9vT0HA4AGEJmc8RlIW7gWQmfFtXwkK7+A1b/
-        9PR0EvE5+vv74xA7Ojqira2teAiYbI72kh0zR0e1HhFM+LSoRg1Y/afd1Z8yOjp6GCZD6O7ujgYHB6Ox
-        sbEqO2aOjvRvHKJynuCerBE+LapRg3T1n2X1z83NJbH/y9raWjZQVw4n75cpz8u0tiB8WlSjDqz+n1n9
-        bF5qwRC04uOdcrpPyMgQ2Ayl0B1R4NGiGnVg9XPDcpXVv7CwkMRdn93d3ai3t/e4IRg5YPVPHbf6fdQY
-        AnXyvdLIwZHVv7S0lESbDzZJMzMz2fA5e+ZBR5wXGDlg9Z9h9W9vbyexHg+h836G1tnZmQb/jWSY/E67
-        LSgH6eqPg1xZWUnirc38/LwbPJsb7kax4BuAwGbyrP7FxUVOuLLBc2j5g+S2fwu+AVj98UNPCZVtuY/l
-        5WU3eMq2H5P/a8E3AeHN11r9lHBO8PiLtOAL4HD1Dw8PRxsbG0nsUdztVCoVN3i6HQu+QAhykdXPKgeG
-        4AmeQ0k6fgu+QFj9hBqNjIzENTPB80nIBJ8+GtiCbwGEysOKoqmpqXgImeDTB2Jb8C3icPU78gAjSjML
-        vsUQMA+pS4Pnk2DBByK7+vmyxIIPzLDkzkK+JLHg/wOmJEOw4A3DMAzDMIxCaWv7Bwp7+TXWib9JAAAA
-        AElFTkSuQmCC
+        L0sjA6uf71bdoB7c398/MzU1dZ/+zqeD97Qa/ilpZEhXv+8qhoPNzc2FnZ2d6uTk5GN6zRCaDZ9DWvYp
+        hgOr/9uenp5odnY2GhgYOBLcxMREbXt7u6Yh7NZqtVbCp0U1HFj93LC2PzIyEq2urkbVavXIEIaGhqL1
+        9fUIMkPgaMndZNWT8J+WhgdW//esfm1q4pCBIXR2dsYB9vX1HQ4AGEJmc8RlIW7gWQmfFtXwkK7+A1b/
+        zMxMEvE5BgcH4xC7urqira2teAiYbI6qyY6Zo6N6jwgmfFpUow6s/tPu6k8ZHx8/DJMh9Pb2RsPDw/y8
+        xo6ZoyP9G4eonCe4J2uET4tq1CFd/WdZ/XNzc0ns/7K2tpYN1JXDyftlyvMyrS0InxbVaACr/2dWP5uX
+        ejAEHQXFO+V0n5CRIbAZSqE7osCjRTUawOrnhuUaq39hYSGJuzF7e3tRf3//cUMwcsDqnz5u9fuoMwTq
+        5HulkYMjq39paSmJNh9skiqVSjZ8zp550BHnBUYOWP1nWP06nExiPR5C5/0Mrbu7Ow3+G8kw+Z12W1AO
+        0tUfB7myspLEW5/5+Xk3eDY33I1iwTcBgVXyrP7FxUXOeLPBc2j5g+S2fwu+CVj98UNPCZVtuY/l5WU3
+        eMq2H5P/a8G3AOHN11v9lHBO8PiLtOAL4HD1j46ORhsbG0nsUdzt7O7uusHT7VjwBUKQi6x+VjkwBE/w
+        HErS8VvwBcLqJ9RobGwsrpkJnk9CJvj00cAWfBsgVB5WFE1PT8dDyASfPhDbgm8Th6vfkQcYUZpZ8G2G
+        gHlIXRo8nwQLPhDZ1c+XJRZ8YEYldxbyJYkF/x8wLRmCBW8YhmEYhmEUSkfHP4oM+RrHwFSWAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="EraserButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
