Added some color selection to drawing

--- a/QuickNote/Form1.resx
+++ b/QuickNote/Form1.resx
@@ -124,29 +124,29 @@
   <data name="SaveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUhSURBVHhe7Z1LTiRHEED5iJ+ELMSGnb3wGXwUhORZcCZb
-        YsEFPBvfY+QzGHljj7yxMDYfCRq5HOGqGcqZrzOyu7KyoTqe9BZAREZWBGqapqnccBxnHZnNZr80K0Tq
-        /9FtZT2RHpxKE57bdqyGbitLcyi+E9+LH8SPoi76Zjw9PW2en1c3A9nDUnwt/ijei7+Kf4vRxb0VVzkE
-        qb8Q+h3/nXgnPojRxbxVVzUEqZ3Nl+LPojY/ugD1+vq6W/b1oXujPfddxRCkbhbfiH+KMzHa+CdfC09P
-        T83t7W330Qu059DaQ5CaJl+J2vxos6G1uLy8bI6OjnAP6tbWVnN8fNzc3d11GS0US9YcgtRLoo/5+rCT
-        /M7/ZC0ODg6wft/t7e3m8fGxy2ihuHnWGoLUSvK9OPcxP7QWVJsMoZiUNYYgdeaiTzWzm6/WgmqTIRRj
-        OfYQpMZc9Hn+Qk81a0G1yRCKyXHMIcj6yBei/pIVbSZlLag2GUIxuY41BFkb+Vb8TYw2krIWVJsMoZhF
-        HGMIsi7yg/iXGG0iZS2oNhlCMYtaegiyJvKT+I8YbSBlLag2GUIxy1hyCLIe8rsYFbasBdUmQyhmWUsN
-        QdZCnsWoqGUtqDYZQjFDLDEEWQeJiuVYC6pNhlDMUIcOQdZAokI51oJqkyEUU8IhQ5B8JCqSYy2oNhlC
-        MaVcdgiSi0QFcqwF1SZDKKakywxB8pBo8RxrQbXJEIop7aJDkBwkWjjHWlBtMoRixnCRIUg8Ei2aYy12
-        d3exft/Nzc0u+gWKG8vcIUgsEi2YYy3Ozs6aw8ND3IOqXzs5OemiX6DYMc0ZgsQh0WI51kL/1Hh+ft7s
-        7+/jPnZ2dpqLi4su+gWKHVtrCBKDRAvlGP4N9jVxf3+Pe65hagjydSRaxB3mvCHI15BoAXe4NAT5PBIl
-        u2XUIfTfECyfQ6JEt5zC53dly8dIlOQWVaegQ9A3NiOU5JbThJLccppQkltOE0pyy2lCSW45TSjJLacJ
-        JbnlNKEkt5wmlOSW04SS3HKaUJJbThNKcstpQkluOU0oyS2nCSW55TShJLecJpTkltOEktxymlCSW04T
-        SnLLaUJJbjlNKAm9ubnRd1esNdoD6k1CE0pCnRbqTUITSkKdFupNQhNKQp0W6k1CE0pC+1xdXWX998pb
-        V69Rr7UPxSU0oSS0z8PDw3//GkRxU1OvtQ/FJDShJDSEYqZoCMUkNKEkNIRipmgIxSQ0oSQ0hGKmaAjF
-        JDShJLTPOv0MmM1m3VW3UExCE0pC++gzg729PYybkvpfmMveFLbThJLQdSS8IaxCvUloQkmo00K9SWhC
-        SajTQr1JaEJJqNNCvUloQkmo00K9SWhCSajTQr1JaEJJqNNCvUloQkmo00K9SWhCSWgf/UVMf0mhuCmp
-        1zj2y9HZN27toy9FUMwUHfBytPbWJPvWxSEUM0VDKGaO2luT7Jt3h1DMFA2hGFB7qr01yb59fZ91egiC
-        +/7kqD3V3ppkH+DQZ11+COsJTUu+Gqo91d6aZB9hso7oQXEh1BtQe6q9zSLrEB+nhXoTqL3UnmaTdYyV
-        00K9CdReak8XwjzIjc5sXDe0B9SbntpD7eXCLHSUoYtq77SH2sulyD7M00W1d9rDQWQdZ+v+T+2V9kx7
-        VwTzQGf3s9oj7ZX2rCiTPdK8kNoT7Y32aOnH/Bwmdaj/QPXatQfaC+3Jwk81h6BTfie+Fz+IH0Xa5BTV
-        a9Vr1mvXHoz6He84juNMkY2NfwGER8MTntziFgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUjSURBVHhe7Z3LTitHEEB5iJeEIsSGXbLIN+RTLKTcBd+U
+        SCz4gdxN/uMq3xCUTXKVTURIeEjYKE5VZu5l0n3c1fb0tGFcRzoLoKqrpwoZY8z0luM4m8hsNvtlvkae
+        np7+aLeymUgPJtKE56Yd66Hdysoci+/E9+IH8aOoi74ZJ5PJ/Pl5fTOQPazE1+KP4oP4q/i3GF3cW3Gd
+        Q5D6S6Hf8d+J9+KjGF3MW3VdQ5Da2Xwp/ixq86MLUG9ubtplXx+6N9pz13UMQepm8Y34pzgTo41/8rUw
+        nU7nd3d37Ucv0J5Daw9Bapp8JWrzo82G1uLq6mp+cnKCe1B3dnbmp6en8/v7+zajgWLJmkOQekn0MV8f
+        dpLf+Z+sxdHREdbvuru7q8+z24wGiltkrSFIrSTfiwsf80NrQbXJEIpJWWMIUmch+lQzu/lqLag2GUIx
+        lkMPQWosRJ/nL/VUsxZUmwyhmByHHIKsj3wh6i9Z0WZS1oJqkyEUk+tQQ5C1kW/F38RoIylrQbXJEIpZ
+        xiGGIOsiP4h/idEmUtaCapMhFLOspYcgayI/if+I0QZS1oJqkyEUs4olhyDrIb+LUWHLWlBtMoRiVrXU
+        EGQt5FmMilrWgmqTIRTTxxJDkHWQqFiOtaDaZAjF9LXvEGQNJCqUYy2oNhlCMSXsMwTJR6IiOdaCapMh
+        FFPKVYcguUhUIMdaUG0yhGJKusoQJA+JFs+xFlSbDKGY0i47BMlBooVzrAXVJkMoZgiXGYLEI9GiOdZi
+        f38f63fd3t5uo1+guKHMHYLEItGCOdbi/Px8fnx8jHtQ9WtnZ2dt9AsUO6Q5Q5A4JFosx1ronxovLi7m
+        h4eHuI+9vb355eVlG/0CxQ6tNQSJQaKFcgz/BvuaeHh4wD3XMDUE+ToSLeL2c9EQ5GtItIDbXxqCfB6J
+        kt0y6hC6bwiWzyFRoltO4fO7suVjJEpyi6pTmEynU31jM0JJbjlNKMktpwklueU0oSS3nCaU5JbThJLc
+        cppQkltOE0pyy2lCSW45TSjJLacJJbnlNKEkt5wmlOSW04SS3HKaUJJbThNKcstpQkluOU0oyS2nCSW5
+        5TShJLecJpTkltOEktDb21t9d8VGoz2g3iQ0oSTUaaDeJDShJNRpoN4kNKEk1Gmg3iQ0oSS0y/X1ddZ/
+        r7x19Rr1WrtQXEITSkK7PD4+/vevQRQ3NvVau1BMQhNKQkMoZoyGUExCE0pCQyhmjIZQTEITSkJDKGaM
+        hlBMQhNKQrts0s+A2WzWXnUDxSQ0oSS0iz4zODg4wLgxqf+FuepNYVtNKAndRMIbwirUm4QmlIQ6DdSb
+        hCaUhDoN1JuEJpSEOg3Um4QmlIQ6DdSbhCaUhDoN1JuEJpSEOg3Um4QmlIQ6DdSbhCaUhHbRX8T0lxSK
+        G5N6jUO/HJ1949Yu+lIExYzRHi9Ha29Nsm9dHEIxYzSEYhaovTXJvnl3CMWM0RCKAbWn2luT7NvXd9mk
+        hyC470+O2lPtrUn2AQ5dNuWHsJ7QtOKrodpT7a1J9hEmm4geFBdCvQG1p9rbLLIO8XEaqDeB2kvtaTZZ
+        x1g5DdSbQO2l9nQpzIPc6MzGTUN7QL3pqD3UXi7NUkcZuqj2TnuovVyJ7MM8XVR7pz3sRdZxtu7/1F5p
+        z7R3RTAPdHY/qz3SXmnPijLaI80LqT3R3miPVn7Mz2FUh/r3VK9de6C90J4s/VSzDzrld+J78YP4UaRN
+        jlG9Vr1mvXbtwaDf8Y7jOM4Y2dr6F38rwvilM6x+AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="LoadButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -272,75 +272,75 @@
   <data name="CursorButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgcSURBVHhe7Z19SJ1VHMd91/n+rhRqSVgZgWZOaQ0jg/Xi
-        H04pCu0/wUrKKIj9UWnUCCoWYyz/KKtJIQqzDcdauXSbrI3CTHqRXvaitlmb25xzc+q99/T9bs8Vs+P1
-        zpfrec7zfOHDxsWLPt9znnN+53d+53n8bHnUrSD2+n9t+Uqh4EVwHPwORsA6YMsHeggMgD/ANBBgDJwD
-        9wJbK6QIsB2cBZOAxs+GjcA74W5ga5l1JzgGzoC5xs+GjcCfyQK2lknlYBRMAJnpc2EjnAacnG0tQf7g
-        bUBDZUZ7gt8ZAjcDW4sQo5w2sBjz3fC7HLaSga0bUALoAeNAZuyNcAn0g3hgywulgUEgi3IWCxuhD0QB
-        Wx50O2CI6QAyI5cC76bvQTiwJdE94CJwAZmBywEboRtwfrE1S4VgOcZ7b7gMOkAQsAXdB2iKzKyV4gpo
-        B4HA0loPaIbMpJWGv7cVcK1hSd0PVst8N1xZfwosJ2YsV9t8N1fBB8AyYqbSVxOut7AR3gPa6zawlNTC
-        SsKF3xtAWzEfw0WW7OJVYQq8ArQTN1K4e7WSi6zlgo3wPNBGjLWPgJVIL6wU3OasAlqoCbBXyS5UZdgI
-        FcDU4q28nFlNX8O7lrtxphRXuWY1/xT4B3wHeoHplAKYg5ddnMowG8sN/Y8B9yVMqQDwI5BdoMqwwIvb
-        l6Yv7noXuIulzABXwRxyPgIMl02tAmCmiOdvwGq6p4HpFQx4QbILVREuDFm2kgO00DvACWQXqxq/gaOA
-        wYIWYhkJx1LZxaoE56Y/QTMIA9qIYZvsglWC+w+sqGbaWatdMF6M6jE/60qHwctAO2UC1TZYZsPAgGnw
-        SqCl4oCqDcAKaZpfBrQWSwllBqwmfwEe1ngUaK1bgCob7G7YIdjzHwTai1VmMhNWC/Z8ml8EtBcPy3l7
-        asUXMNLhsFMMtBcn3wtAZsRqwDQye/4jwBL6EqiS9WRHYM8vBZbQS0CV0JMBAGP9p4AlxMnN19XM88E9
-        W+bytSoj8aR0cB6oUt/D3M6bwBKKBnwmgypRzwnwIbCEeJqkEzCpJTPD17Dnfw0sc8qlETDKkJnhazjh
-        /gp4R1pCHGNVMZ/DH+N9zkWWEKMLblrLzFgNOARaIsVAMa5WyXzehbXAEuKKkqtLVTbZeajjC2AJMZdC
-        81Wq72GdJnNP2otZRJqvUoUD6zUtkd3k5MZVrkqbK0w1WGLo4c4RzVclx+OGvZ87blqLe6YcdlTaWHHD
-        IiqtxWoB9nxVq9pYb6Tt5Ms6GfZ8lU+xcOHFuiPtxAoxLrJUP7nIDqJdGSFrIxd69qYKsHO8D7QRq4Fb
-        ABc1sgtWDW55supaC7EOns9LM0PPJ4zIXgNaiCdAWCPJaEd2sSrCDReeuDG9ePaJixkzHJ5ww96fB0wt
-        nvb7BJip1xOuxF8HphbPubI4lSGc7CJVhUVehwHPGZtSPNn9GeCQY5bDcrPh3WrKQ3M/G6iaz/EGDj2m
-        PKF+sqSkhE/9M9PJ9Lkw3jfts3nOxMTEuDZs2MBCWTM+k4fJtgZgWv2yc+fO0aysLFFUVMTHvZupEdjz
-        vwGmfnpt1759+06PjIyIdevWiby8PJbrmaEROFf9BEz/cIzWxsbGAQFNTEyI8vJykZ2dPRIQEKByIzD9
-        zWNEWrzVYvvmzZuPswEop9MpamtrRUZGxuWQkBAVJ2b+Tazv4fNDtVB9TU3NMcP/GW3ZskUkJydPRURE
-        qJTv59/CUFmrd3w9t3Hjxpk7YLZaW1tFfHy8IzY2VoVG4HkCLhC1e8vd4+vXrz9peP4/dXd3i8TERCfB
-        z8qM8QX83TRfy/c8PoBJ95Tht1T9/f0iPT3dmZKSshqNwLuP5vNR9VrqLvTuEcPreTU8PCxycnKcqamp
-        vjxaRPO5qc7HmGmrpPDw8HHDZ48aHx8XxcXFvBN80QgMNTnh8sU8WisQMf8Y7oLpAwcOGFbPL4fDIaqq
-        qlwJCQky05YL97HRbKC/4uLiugoLC52RkZEObxqBqqurc8XExMjMWypML/Ag303AEsqJjo6+MjY2JrZu
-        3TqF4cjrRmhqahJRUVHC399fZuRiYA3/tyAGWEPoxUe3bdvmMjwVO3bsmFqzZo3XjbB//36BBhSBgYEy
-        Q28EZjX53DgtNtK91WMZGRmXOK7PVktLy1RYWJijs7PT+MSz+vr6RFJSkggJCZEZ6w0c858FllJgRETE
-        iT179hg2/le7d++eCg0NdXR0dBifeNbQ0JDIzMwU+I7M4Plgwo95HW1jfE+qXrt27QXDP6na29un2Qh7
-        9+51Gh951OjoqCgoKBAYwmRmz4XpZD6oyRLHhuYqCsae7+3tNaybX7gDHBiOnG1tbVPGRx41OTkpSktL
-        F2oE7t/WAGsKUctbZWVl5w3PFhTmAicMdTY3N08YH3mUy+W6ltJGw801nqnkr0AisLRObdq06bDh14Ka
-        np4WaLCriHQcPT0954yPFxTCWvecwBwStzvz+ctt+fnlgoGKiopuw6t5dejQIVdaWtpIUFAQe+4L+Pfs
-        wYMHh5kbYpKuq6tL4M4QDQ0Nor6+XlRXV4uSkpIr+fn5E/jeFCIjV3BwMOtKbc1RKjiam5v7AxZhM+sA
-        tzihVlZWjsFAPkPtiWvfuK6HMYRdxOfnsGgbAEewlmhHRMUyxjrwDHgSPADuAPw9tuYR6/0/T01NPTY4
-        ODizGMA6QERGRo5j3OcbIayzKl1FvYoefWbXrl2TxcXFE+jNfBcK31Bty4cqw1g9Ehsby8pi+1Xdyy4/
-        v38B8lww4qNivc4AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgZSURBVHhe7Z1bTFxFHMa5Q6Hcr5EASgwqxgRECxEJVkyq
+        2AcK0WjRNxJUohhNTB9UMNqYqCnpQ+VBUUs0BJJimza1SoU2pLbRIBIvxEtbEFu0pS2ltBTY3fH72rME
+        cVi2XJY5c86X/NJmA1nON3Nm/vOf/5zjZ8ujbgEx1/9ry1cKBS+CE+A3MAIKgS0f6CEwCH4H00CAMXAO
+        3ANsrZAiwA5wFkwCGj8bNgLvhLuArWXWHeA4OAPmGj8bNgJ/JgvYWiZVgFEwAWSmz4WNcBpwcra1BPmD
+        twENlRntCf7OEEgFthYhRjntYDHmu+HvcthKArZuQPGgB4wDmbE3wiXQD+KALS+UBv4EsihnsbAR+kAk
+        sOVBtwGGmA4gM3Ip8G76DoQDWxLdDS4CF5AZuBywEboB5xdbs1QAlmO894bLoAMEAVvQfYCmyMxaKa6A
+        vSAQWFpFgGbITFpp+L1tgGsNS+p+sFrmu+HK+hNgOTFjudrmu7kK3geWETOVvppwvYWN8B7QXreCpaQW
+        VhIu/N4A2or5GC6yZBevClPgFaCduJHC3auVXGQtF2yE54E2Yqx9FKxEemGl4DZnFdBCzYC9SnahKsNG
+        qASmFm/l5cxq+hretdyNM6W4yjWr+afAP+Bb0AtMp2TAHLzs4lSG2Vhu6H8EuC9hSgWAH4DsAlWGBV7c
+        vjR9cde7wF0sZQa4CuaQ8yFguGxq5QMzRTx/A1bTPQ1Mr2DAC5JdqIpwYciylRyghd4BTiC7WNX4FRwD
+        DBa0EMtIOJbKLlYlODf9AVpAGNBGDNtkF6wS3H9gRTXTzlrtgvFiVI/5WVc6DF4G2ikTqLbBMhsGBkyD
+        PwW0VCxQtQFYIU3zy4HWYimhzIDV5C/AwxqlQGvdDFTZYHfDDsGe/yDQXqwyk5mwWrDn0/xioL14WM7b
+        Uyu+gJEOh50SoL04+V4AMiNWA6aR2fMfAZbQF0CVrCc7Ant+GbCEXgKqhJ4MABjrPwksIU5uvq5mng/u
+        2TKXr1UZiSelg/NAlfoe5nbeBJZQFOAzGVSJek6CD4AlxNMknYBJLZkZvoY9/ytgmVMuTYBRhswMX8MJ
+        9xfAO9IS4hirivkc/hjvcy6yhBhdcNNaZsZqwCHQEikGinG1SubzLqwFlhBXlFxdqrLJzkMdnwNLiLkU
+        mq9SfQ/rNJl70l7MItJ8lSocWK9piewmJzeuclXaXGGqwRJDD3eOaL4qOR437P3ccdNa3DPlsKPSxoob
+        FlFpLVYLsOerWtXGeiNtJ1/WybDnq3yKhQsv1h1pJ1aIcZGl+slFdhDtyghZG7nQszdVgJ2jAWgjVgO3
+        Ai5qZBesGtzyZNW1FmIdPJ+XZoaeTxiRvQa0EE+AsEaS0Y7sYlWEGy48cWN68ewTFzNmODzhhr0/D5ha
+        PO33MTBTrydcib8OTC2ec2VxKkM42UWqCou8jgCeMzaleLL7U8AhxyyH5WbDu9WUh+Z+MlA1n+MNHHpM
+        eUJ9YOPGjXzqn5lOps+F8b5pn81zJjo62rVhwwYWyprxmTxMtjUC0+rnXbt2jWZlZYni4mI+7t1MjcCe
+        /zUw9dNruw4cOHB6ZGREFBYWiry8PJbrmaEROFf9CEz/cIy2pqamQQFNTEyIiooKkZ2dPRIQEKByIzD9
+        zWNEWrzVYsfWrVtPsAEop9MpamtrRUZGxuWQkBAVJ2b+Tazv4fNDtVB9TU3NccP/GW3btk0kJSVNRURE
+        qJTv59/CUFmrd3w9t2nTppk7YLba2tpEXFycIyYmRoVG4HkCLhC1e8vdY0VFRQOG5/9Td3e3SEhIcBL8
+        rMwYX8DvpvlavufxAUy6pwy/perv7xfp6enO5OTk1WgE3n00n4+q11J3onePGF7Pq+HhYZGTk+NMSUnx
+        5dEims9NdT7GTFslhoeHjxs+e9T4+LhYv3497wRfNAJDTU64fDGP1gpEzD+Gu2D60KFDhtXzy+FwiKqq
+        Kld8fLzMtOXCfWw0G+iv2NjYroKCAufatWsd3jQCVVdX54qOjpaZt1SYXuBBvpuAJZQTFRV1ZWxsTDQ0
+        NExhOPK6EZqbm0VkZKTw9/eXGbkYWMP/DYgG1hB68bHt27e7DE/Fzp07p9asWeN1Ixw8eFCgAUVgYKDM
+        0BuBWU0+N06LjXRv9WhGRsYljuuz1draOhUWFubo7Ow0PvGsvr4+kZiYKEJCQmTGegPH/GeBpRQYERFx
+        ct++fYaN/9WePXumQkNDHR0dHcYnnjU0NCQyMzMFfkdm8Hww4ce8jrYxvidVr1u37oLhn1RohGk2wv79
+        +53GRx41Ojoq8vPzBYYwmdlzYTqZD2qyxLGhuYqEsed7e3sN6+YX7gAHhiNne3v7lPGRR01OToqysrKF
+        GoH7tzXAmkLU8lZ5efl5w7MFhbnACUOdLS0tE8ZHHuVyua6ltNFwc41nKvlLkAAsrVNbtmw5Yvi1oKan
+        pwUa7CoiHUdPT8854+MFhejKPScwh8Ttznv55bb8/HLBYGVlZbfh1bxCOOpKS0sbCQoKYs99Af+ePXz4
+        8DBzQ0zSdXV1CdwZorGxUdTX14vq6mpRWlp6JS8vbyI1NXUKkZErODiYdaW25igFHMvNzf0ek+fMOsAt
+        TqibN28eg4F8htrj137juh7GEHYRn5/Dom0QHMVaYi8iKpYx1oFnwBPgAXA74PfYmkes9/8sJSXl+MDA
+        wMxiAOsAAUPHMe7zjRDWWZWuol5Fjz6ze/fuyZKSkgmYz3eh8A3VtnyocozVIzExMawstl/Vvezy8/sX
+        Gg0wnWstz9QAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="DrawButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYwSURBVHhe7ZxJaCRlGIZHxURFRERIBEEUxYOCYIzgQUQM
-        ydX9KoJCJB4EPXhQUNSDB5OQHCTBQxAUvAh6EBQ8KBgEQXEflzjZ92g2Ndt0+T41VbHy83en0l39i9T3
-        wMNMZ3pyeL+/a3m7qk4ZhmEY/0duli/JG+NXRlAekQcykn/Le6QRiDclwWfdkTaEALwn3fBTbQhN5Dz5
-        qfQFn9WG0ARa5TfSF7hPG0KBXCGnpS/oWtoQCuBa+Zv0BZxHG0IDdMoluSl94ebVhlAnU3Jd+kI9qTaE
-        OrhL/iF3pS/Uk2pDyMGdck7eHb+yIQTlDrkmtyTVQrOGwO+27sjhdrkqCTobVLOG8LI0Em6VbvipzRgC
-        BR4tqiFukSuy1tFO0UOgRTXETXJZ5jnULGoItKiGYCfISdaG9AXlWpG8P6WeIdCiGuJ6uShPEj5nw4Se
-        5SRDoEU1xHVyXtYbPn+y2TrJ5ogWlSq79FwjZ2XebscXPq/5eZ59Akc7pyVVdum5WlIpFxF++p5aQ+C9
-        tKhU2aXnKjkpOcNNw6tlnvBTfUPgqIodNlV26WmTrMRmhJ/qDoFP2m3xq5JzpfxZbktfcK71hJ+aHYIh
-        2PayAwwRPvIJo0U1xOXye/mn9IXl2mj4bPdpUamyS89lkuPu0OFTZZeeS+VX8i/pC8u10fA52qFFpcou
-        PZfIL2TI8GlRqbJLz8Xyc8mRiC8s10bDp8agjqDKLj2c5n8mQ4bPSRZVdulpkZ/IkOHTotr3ueJC+bHk
-        KgNfWK6Nhs97aVFvkKXnAvmRDBk+LSpVdukh/A9k3m+iGg2fM9wZSZVdes6X78uQ4dOiUmWXHr5ReleG
-        Cp8OiRaVKrv0EP47ck/6wnItInxaVKpsQ7wlQ4VPh0SLSpVtiDEZMnxaVPsaMeENuS99Ybk2Gj4d0teS
-        KtsQr8uQ4dOiUmUbYkiGCp8agxaVKtsQ/TK9/f84iwifFpUq2xCvypDh06JSZRuCGxZChU+HRItqV6wl
-        vCBDhk+LSpVtiOdkqPCpMT6UVNmGeFaelb6wXIsInxaVNtUQz8iQ4dOiWvgJT8lQ4VNj0KJSZRviSRky
-        fFpUuzki4QkZMnxaVAs/4XEZKnxqDFpUI+FRGTJ8WlQjQzNvjshK+LSohsMD8rjr9BsNn5M5WlRDtEuu
-        Jng4fnUOzni5mNUXXhHhvyaNBCplnjZFMA/xg4S3pfv8tSLCp0U1Elj9v8v08pHsEC6S9O9fSv6tiPBf
-        kUYGVj/frbpBPbi/v39mfHz8Pv2dTwfvaTT8F6WRIV39vqsYDtbX1+f29vZ2x8bGHtNrhlBv+BzSsk8x
-        HFj937W3t0fT09NRd3f3keBGR0cru7u7FQ1hu1KpNBI+LarhwOrnhrX9/v7+aHl5OVLYR4bQ29sbra6u
-        RpAZAkdL7iarmoT/tDQ8sPp/YPVrUxOHDAyhpaUlDrCzs/NwAMAQMpsjLgtxA89K+LSohod09R+w+icn
-        J5OIz9HT0xOH2NraGm1sbMRDwGRztJvsmDk6qvaIYMKnRTWqwOo/7a7+lKGhocMwGUJHR0fU19cXjYyM
-        VNgxc3Skf+MQlfME92SN8GlRjSqkq/8sq39mZiaJ/V9WVlaygbpyOHm/THleprUF4dOiGjVg9f/C6mfz
-        Ug2GMDw8HO+U031CRobAZiiF7ogCjxbVqAGrnxuWK6z+ubm5JO7a7OzsRF1dXccNwcgBq3/iuNXvo8oQ
-        qJPvlUYOjqz+hYWFJNp8sEmamprKhs/ZMw864rzAyAGr/wyrf3NzM4n1eAid9zO0tra2NPhvJcPkd9pt
-        QTlIV38c5NLSUhJvdWZnZ93g2dxwN4oFXwcENpVn9c/Pz0dbW1vZ4Dm0/FFy278FXwes/vihp4TKttzH
-        4uKiGzxl20/J/7XgG4DwZqutfko4J3j8VVrwBXC4+gcGBqK1tbUk9ijudra3t93g6XYs+AIhyHlWP6sc
-        GIIneA4l6fgt+AJh9RNqNDg4GNfMBM8nIRN8+mhgC74JECoPK4omJibiIWSCTx+IbcE3icPV78gDjCjN
-        LPgmQ8A8pC4Nnk+CBR+I7OrnyxILPjADkjsL+ZLEgv8PmJAMwYI3DMMwDMMwCuXUqX8ADOj51zj3gSMA
-        AAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYxSURBVHhe7ZxLaCRVGEZHxURFRERIBEEUxYWCYIzgQkQM
+        ydb3VgSFSFwIunCh4KAuXJiEZJEsXARBwY2gC0HBhYJBEBTf4yNO3u9oXprEZLr8Tk1VrFxudyrd1Vek
+        /gOHmc70ZPH9t+vxdVWdMgzDMP6P3CpfljfHr4ygPCYPZCR35H3SCMSbkuCz7kobQgDek274qTaEJnKB
+        /FT6gs9qQ2gCrfIb6Qvcpw2hQK6S09IXdC1tCAVwvfxN+gLOow2hATrlktyUvnDzakOokym5Ln2hnlQb
+        Qh3cI/+Qe9IX6km1IeTgbjkn741f2RCCcpdck1uSaqFZQ+B3W3fkcKdclQSdDapZQ3hFGgm3Szf81GYM
+        gQKPFtUQt8kVWetop+gh0KIa4ha5LPMcahY1BFpUQ7AT5CRrQ/qCcq1I3p9SzxBoUQ1xo1yUJwmfs2FC
+        z3KSIdCiGuIGOS/rDZ8/2WydZHNEi0qVXXquk7Myb7fjC5/X/DzPPoGjnTOSKrv0XCuplIsIP31PrSHw
+        XlpUquzSc42clJzhpuHVMk/4qb4hcFTFDpsqu/S0SVZiM8JPdYfAJ+2O+FXJuVr+LLelLzjXesJPzQ7B
+        EGx72QGGCB/5hNGiGuJK+b38U/rCcm00fLb7tKhU2aXnCslxd+jwqbJLz+XyK/mX9IXl2mj4HO3QolJl
+        l57L5BcyZPi0qFTZpedS+bnkSMQXlmuj4VNjUEdQZZceTvM/kyHD5ySLKrv0tMhPZMjwaVHt+1xxsfxY
+        cpWBLyzXRsPnvbSoN8nSc5H8SIYMnxaVKrv0EP4HMu83UY2GzxnujKTKLj0XyvdlyPBpUamySw/fKL0r
+        Q4VPh0SLSpVdegj/Hfm39IXlWkT4tKhU2YZ4S4YKnw6JFpUq2xBjMmT4tKj2NWLCG3Jf+sJybTR8OqSv
+        JVW2IUZkyPBpUamyDTEkQ4VPjUGLSpVtiH6Z3v5/nEWET4tKlW2I12TI8GlRqbINwQ0LocKnQ6JFtSvW
+        El6SIcOnRaXKNsQLMlT41BgfSqpsQzwvz0lfWK5FhE+LSptqiOdkyPBpUS38hGdkqPCpMWhRqbIN8bQM
+        GT4tqt0ckfCUDBk+LaqFn/CkDBU+NQYtqpHwuAwZPi2qkaGZN0dkJXxaVMPhIXncdfqNhs/JHC2qIdol
+        VxM8Gr86D2e8XMzqC6+I8F+XRgKVMk+bIphH+EHC29J9/loR4dOiGgms/t9levlIdgiXSPr3LyX/VkT4
+        r0ojA6uf71bdoB7e398/Oz4+/oD+zqeD9zQa/mlpZEhXv+8qhoP19fW53d3dvbGxsSf0miHUGz6HtOxT
+        DAdW/3ft7e3R9PR01N3dfSS40dHRys7OTkVD2K5UKo2ET4tqOLD6uWFtv7+/P1peXo729vaODKG3tzda
+        XV2NIDMEjpbcTVY1Cf9ZaXhg9f/A6temJg4ZGEJLS0scYGdn5+EAgCFkNkdcFuIGnpXwaVEND+nqP2D1
+        T05OJhGfp6enJw6xtbU12tjYiIeAyeZoL9kxc3RU7RHBhE+LalSB1X/GXf0pQ0NDh2EyhI6Ojqivry8a
+        GRmpsGPm6Ej/xiEq5wnuyRrh06IaVUhX/zlW/8zMTBL7v6ysrGQDdeVw8kGZ8qJMawvCp0U1asDq/4XV
+        z+alGgxheHg43imn+4SMDIHNUArdEQUeLapRA1Y/NyxXWP1zc3NJ3LXRdj/q6uo6bghGDlj9E8etfh9V
+        hkCdfL80cnBk9S8sLCTR5oNN0tTUVDZ8zp550BHnBUYOWP1nWf2bm5tJrMdD6LyfobW1taXBfysZJr/T
+        bgvKQbr64yCXlpaSeKszOzvrBs/mhrtRLPg6ILCpPKt/fn4+2traygbPoeWPktv+Lfg6YPXHDz0lVLbl
+        PhYXF93gKdt+Sv6vBd8AhDdbbfVTwjnB46/Sgi+Aw9U/MDAQra2tJbFHcbezvb3tBk+3Y8EXCEHOs/pZ
+        5cAQPMFzKEnHb8EXCKufUKPBwcG4ZiZ4PgmZ4NNHA1vwTYBQeVhRNDExEQ8hE3z6QGwLvkkcrn5HHmBE
+        aWbBNxkC5iF1afB8Eiz4QGRXP1+WWPCBGZDcWciXJBb8f8CEZAgWvGEYhmEYhlEop079AwwZ+aHThuHR
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="EraserButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
